--- a/web26indexhospitales.html
+++ b/web26indexhospitales.html
@@ -103,7 +103,7 @@
                         <a class="nav-link" href="web26createhospital.html">Create Hospital</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="web26edithospital.html">Update Hospital</a>
                     </li>
                 </ul>
             </div>
