--- a/web26edithospital.html
+++ b/web26edithospital.html
@@ -103,7 +103,7 @@
                         <a class="nav-link" href="web26createhospital.html">Create Hospital</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-disabled="true">Update Hospital</a>
+                        <a class="nav-link" aria-disabled="true">Update Hospitaal</a>
                     </li>
                 </ul>
             </div>
